force-app/main/default/objects/CustomObject879__c/CustomObject879__c.object-meta.xml
<CustomObject>
    <label>ｗｗｗｗ</label>
    <nameField>
        <label>ｗｗｗｗ</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>