force-app/main/default/objects/CustomObject879__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <label>制御A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>