force-app/main/default/objects/CustomObject879__c/fields/B__c.field-meta.xml
<CustomField>
    <fullName>B__c</fullName>
    <label>連動B</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>A__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>