force-app/main/default/objects/CustomObject879__c/fields/Field143__c.field-meta.xml
<CustomField>
    <fullName>Field143__c</fullName>
    <label>処理年月日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>