force-app/main/default/objects/CustomObject879__c/fields/Field168__c.field-meta.xml
<CustomField>
    <fullName>Field168__c</fullName>
    <label>論理削除フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>