force-app/main/default/objects/CustomObject879__c/fields/Field222__c.field-meta.xml
<CustomField>
    <fullName>Field222__c</fullName>
    <label>カード会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>