force-app/main/default/objects/CustomObject879__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field168__c</columns>
    <columns>Field143__c</columns>
    <columns>ID__c</columns>
    <columns>Field552__c</columns>
    <columns>Field609__c</columns>
    <columns>Field222__c</columns>
    <columns>Field789__c</columns>
    <columns>Field930__c</columns>
    <columns>Field686__c</columns>
    <columns>Field716__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>